--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
 
   <title>Frontend Mentor | Four card feature section</title>
 
@@ -15,24 +17,46 @@
   </style>
 </head>
 <body>
-  <h1>Reliable, efficient delivery</h1>
-  <h2>Powered by Technology</h2>
+  <div class="top-container">
+  <h1 class="top_title">Reliable, efficient delivery</h1>
+  <h1 class="bottom_title">Powered by Technology</h1>
+
+  <p>Our Artificial Intelligence powered tools use millions of project data points
+  to ensure that your project is successful</p>
+
+  </div>
+
+  <div class="middle-container">
+
+    <div class="card super">
+      <hr class="lightblue">
+      <h3>Supervisor</h3>
+      <p>Monitors activity to identify project roadblocks</p>
+    </div>
+
+    <div class="card team">
+      <hr class="red">
+      <h3>Team Builder</h3>
+      <p>Scans our talent network to create the optimal team for your project</p>
+    </div>
+
+    <div class="card karma">
+      <hr class="orange">
+      <h3 >Karma</h3>
+      <p>Regularly evaluates our talent to ensure quality</p>
+    </div>
+
+    <div class="card calc">
+      <hr class="blue">
+      <h3>Calculator</h3>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+    </div>
 
 
-  Our Artificial Intelligence powered tools use millions of project data points
-  to ensure that your project is successful
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
 
 
   <footer>
