--- a/index.html
+++ b/index.html
@@ -32,24 +32,28 @@
       <hr class="lightblue">
       <h3>Supervisor</h3>
       <p>Monitors activity to identify project roadblocks</p>
+      <img src="images/icon-supervisor.svg" alt=" supervisor-icon">
     </div>
 
     <div class="card team">
       <hr class="red">
       <h3>Team Builder</h3>
       <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="images/icon-team-builder.svg" alt=" team-builder-icon">
     </div>
 
     <div class="card karma">
       <hr class="orange">
       <h3 >Karma</h3>
       <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="images/icon-karma.svg" alt=" karma-icon">
     </div>
 
     <div class="card calc">
       <hr class="blue">
       <h3>Calculator</h3>
       <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="images/icon-calculator.svg" alt=" calculator-icon">
     </div>
 
 
